@@ -57,6 +57,18 @@
 #   | The user can override and set variables in mk_oracle_cfg.ps1         |
 #   '----------------------------------------------------------------------'
 
+# Example configuration for ORACLE plugin for Windows
+# Set the ORACLE_HOME if we have more than one oracle home on the server
+# then we can generate the PATH based on that. Note that the tnsnames.ora
+# must then be in %ORACLE_HOME%\network\admin, or use the the environment
+# variable %TBS_ADMIN% to set to another directory.
+# $ORACLE_HOME="C:\oracle\product\12.1.0.1"
+
+# $DBUSER=@("sys", "Secret12", "SYSDBA", "localhost", "1521")
+# $DBUSER_tst=@("sys", "Secret12", "SYSDBA", "localhost", "1521")
+# $DBUSER_orcl=@("sys", "Secret12", "SYSDBA", "localhost", "1521")
+# $DBUSER_orcl=@("sys", "Secret12", "SYSDBA", "localhost", "1521")
+# $ASMUSER=@("user", "password", "SYSDBA/SYSASM", "hostname", "port")
 
 
 # what should happen when an error occurs? SilentlyContinue, Continue, Stop, and Inquire
