@@ -4,6 +4,7 @@
     * 5316 FIX: cmciii.access: Fixed error state handling...
     * 5518 FIX: win.mem: Fix incorrect representation of absolute memory levels in graphs...
     * 5548 FIX: zpool_status: Fixed crash if pool has been deleted or vanished...
+    * 5549 FIX: mk_oracle.ps1: Fixed scattered information for configuration...
 
     WATO:
     * 4222 FIX: Services of host page: Fixed encoding issue for hosts with umlauts in alias
